--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Интернет-магазин</title>
     <link rel="stylesheet" href="css.css">
-    <link rel="JavaScript" href="js.js">
+    <script src="js.js"></scirpt>
 </head>
 <body>
     <header>
