--- a/index.html
+++ b/index.html
@@ -27,7 +27,6 @@
             </div>
         </div>
     </header>
-
     <main>
         <section class="hero">
             <div class="container">
@@ -190,6 +189,6 @@
             <button class="checkout-btn" id="checkout-btn">Оформить заказ</button>
         </div>
     </div>
-<script src="js.js"></scirpt>
+    <script src="js.js" defer></script>
 </body>
 </html>
